--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,9 @@
-# QAToolBox 统一依赖文件 - Python 3.9兼容
+# ModeShift Django 项目依赖文件 - Python 3.13兼容
 # =============================================
 # 包含开发、生产、测试所需的完整依赖，无版本冲突
 
 # ===== 核心Django框架 =====
-Django==4.2.7
+Django==5.2.6
 djangorestframework==3.14.0
 django-cors-headers==4.3.1
 django-crispy-forms==2.0
@@ -18,160 +18,77 @@ django-extensions==3.2.3
 channels==4.0.0
 channels-redis==4.1.0
 daphne==4.0.0
-asgiref==3.8.1
 
-# ===== 数据库和缓存 =====
-redis>=5.0.0
-django-redis>=5.4.0
-django-cacheops>=7.0.2
-psycopg2-binary>=2.9.7
-django-db-connection-pool>=1.2.4
+# ===== 数据库支持 =====
+psycopg[binary]>=3.1.0
+redis==5.0.1
+
+# ===== 缓存和会话 =====
+django-redis==5.4.0
+
+# ===== 认证和安全 =====
+django-allauth==0.57.0
+django-oauth-toolkit==1.7.1
+cryptography==41.0.7
+PyJWT==2.8.0
+
+# ===== 文件处理 =====
+Pillow==10.4.0
+openpyxl==3.1.2
+xlsxwriter==3.1.9
+
+# ===== PDF处理 =====
+# PyMuPDF==1.23.8  # 暂时跳过，Python 3.13兼容性问题
+pypdf==3.17.4  # 替代方案
+pdfplumber==0.10.3  # 增强PDF处理
+reportlab==4.0.7
+
+# ===== 网络请求 =====
+requests==2.31.0
+urllib3==2.1.0
+httpx==0.25.2
+
+# ===== 数据处理 =====
+pandas>=2.2.0
+numpy==1.26.2
 
 # ===== 任务队列 =====
-celery>=5.3.4
-django-celery-beat>=2.5.0
+celery==5.3.4
+django-celery-beat>=2.6.0
+django-celery-results==2.5.1
 
-# ===== Web服务器和静态文件 =====
-gunicorn==21.2.0
-whitenoise==6.6.0
-
-# ===== 环境配置 =====
-python-dotenv==1.0.0
-
-# ===== HTTP请求和网络 =====
-requests==2.31.0
-urllib3==1.26.18
-beautifulsoup4==4.12.2
-lxml==4.9.3
-html5lib==1.1
-
-# ===== 图像处理 =====
-Pillow>=9.5.0
-
-# ===== 数据处理和分析 =====
-pandas>=2.1.0
-numpy>=1.26.0
-matplotlib>=3.8.0
-pyecharts==2.0.4
-
-# ===== 文档处理 =====
-python-docx==1.1.0
-python-pptx>=0.6.22
-openpyxl==3.1.2
-xlrd==2.0.1
-xlwt==1.3.0
-reportlab==4.0.9
-pypdfium2==4.23.1
-pdfplumber==0.10.3
-pdfminer.six==20221105
-PyMuPDF==1.23.26
-pdf2docx==0.5.6
-docx2pdf==0.1.8
-xmind==1.2.0
-
-# ===== OCR和图像识别 =====
-pytesseract==0.3.10
-
-# ===== 音频处理 =====
-pydub==0.25.1
-mutagen==1.47.0
-librosa>=0.10.1
-scipy>=1.11.0
-soundfile>=0.12.1
-audioread>=3.0.1
-resampy>=0.4.2
-
-# ===== 浏览器自动化 =====
-selenium>=4.15.2
-webdriver-manager>=4.0.1
-
-# ===== 加密和安全 =====
-cryptography>=41.0.7
-
-# ===== 时间和日期 =====
-python-dateutil>=2.8.2
-pytz>=2023.3
-
-# ===== 工具库 =====
-tenacity==8.2.3
-prettytable==3.9.0
-qrcode[pil]==8.2
-simplejson==3.19.3
-six==1.17.0
-ratelimit==2.2.1
-pillow-heif==1.1.0
-
-# ===== 金融数据 =====
-yfinance==0.2.28
-multitasking==0.0.11
-
-# ===== 数据库ORM =====
-peewee==3.17.9
-
-# ===== 生产环境监控 =====
-sentry-sdk[django]==1.38.0
-structlog==23.2.0
-django-csp==3.7
-gevent==23.9.1
+# ===== 监控和日志 =====
+sentry-sdk==1.38.0
 django-debug-toolbar==4.2.0
 
-# ===== 测试框架 =====
-pytest==7.4.4
-pytest-django==4.8.0
-pytest-cov==4.1.0
-pytest-mock==3.12.0
-pytest-xdist==3.5.0
-pytest-html==4.1.1
+# ===== 健康检查 =====
+django-health-check==3.17.0
 
-# ===== 测试工具 =====
-requests-mock==1.11.0
-factory-boy==3.3.0
-faker==20.1.0
-responses==0.24.1
-freezegun==1.4.0
-model-bakery==1.17.0
-coverage==7.4.4
-
-# ===== 额外必需依赖 =====
-kombu==5.3.4
-billiard==4.2.0
-vine==5.1.0
-amqp==5.2.0
-click==8.1.7
-click-didyoumean==0.3.0
-click-plugins==1.1.1
-click-repl==0.3.0
-
-# ===== 代码质量 =====
-flake8==6.1.0
+# ===== 开发工具 =====
+# 代码质量工具
 black==25.1.0
 isort==5.13.2
-bandit==1.7.5
-pbr>=5.0.0
-defusedxml>=0.7.1
+flake8==6.1.0
 mypy==1.8.0
+bandit==1.7.5
+safety==3.0.1
 pylint==3.0.3
-safety>=2.3.5
 
-# ===== 基础依赖（按字母排序，避免冲突） =====
-certifi==2025.1.31
-charset-normalizer==3.4.1
-contourpy==1.3.0
-cycler==0.12.1
-fonttools==4.55.8
-frozendict==2.4.6
-idna==3.10
-importlib_resources==6.5.2
-Jinja2==3.1.5
-kiwisolver==1.4.7
-MarkupSafe==3.0.2
-packaging
-platformdirs==4.3.6
-pyparsing==3.2.1
-soupsieve==2.6
-sqlparse==0.5.3
-typing_extensions==4.12.2
-tzdata==2025.1
-wcwidth==0.2.13
-webencodings==0.5.1
-zipp==3.21.0
+# 测试工具
+pytest==7.4.3
+pytest-django==4.7.0
+pytest-cov==4.1.0
+pytest-xdist==3.5.0
+pytest-html==4.1.1
+coverage==7.4.0
+
+# ===== 部署工具 =====
+gunicorn==21.2.0
+whitenoise==6.6.0
+python-decouple==3.8
+
+# ===== 其他工具 =====
+python-dotenv==1.0.0
+click==8.1.7
+rich==13.7.0
+typer==0.9.0
