修复CI/CD问题：优化代码质量，修复测试配置，提升测试覆盖率
- 修复测试配置中的日志配置问题
- 添加apps.share到INSTALLED_APPS
- 修复f-string警告和代码质量问题
- 优化E2E测试异步上下文问题
- 提升测试覆盖率到10%
- 修复数据库迁移问题
- 代码质量检查通过，安全扫描通过

--- a/pytest.ini
+++ b/pytest.ini
@@ -9,6 +9,7 @@ addopts =
     --maxfail=1
     --reuse-db
     --nomigrations
+    --asyncio-mode=auto
 markers =
     unit: 单元测试
     integration: 集成测试
@@ -17,6 +18,7 @@ markers =
     slow: 慢速测试
     security: 安全测试
     performance: 性能测试
+    asyncio: 异步测试
 filterwarnings =
     ignore::DeprecationWarning
     ignore::PendingDeprecationWarning
