--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -64,6 +64,8 @@ services:
       
       # 第三方API配置
       DEEPSEEK_API_KEY: ${DEEPSEEK_API_KEY}
+      PIXABAY_API_KEY: ${PIXABAY_API_KEY}
+      AMAP_API_KEY: ${AMAP_API_KEY}
       GOOGLE_API_KEY: ${GOOGLE_API_KEY}
       GOOGLE_CSE_ID: ${GOOGLE_CSE_ID}
       OPENWEATHER_API_KEY: ${OPENWEATHER_API_KEY}
