修复YAML语法错误
- 修复第496行的YAML语法错误
- 将多行cat命令改为多个echo命令
- 确保YAML文件语法正确
- 解决GitHub Actions工作流失败问题

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -492,20 +492,18 @@ jobs:
             echo "✅ 已复制生产环境配置"
           elif [ ! -f ".env" ]; then
             echo "⚠️ 未找到环境配置文件，创建基础配置..."
-            cat > .env << EOF
-DEBUG=False
-DJANGO_SECRET_KEY=django-production-secret-key-change-me
-DB_NAME=qatoolbox_production
-DB_USER=qatoolbox
-DB_PASSWORD=qatoolbox123
-DB_HOST=db
-DB_PORT=5432
-REDIS_URL=redis://:redis123@redis:6379/0
-ALLOWED_HOSTS=47.103.143.152,localhost,127.0.0.1,shenyiqing.xin,www.shenyiqing.xin
-DEEPSEEK_API_KEY=sk-c4a84c8bbff341cbb3006ecaf84030fe
-PIXABAY_API_KEY=36817612-8c0c4c8c8c8c8c8c8c8c8c8c
-AMAP_API_KEY=a825cd9231f473717912d3203a62c53e
-EOF
+            echo "DEBUG=False" > .env
+            echo "DJANGO_SECRET_KEY=django-production-secret-key-change-me" >> .env
+            echo "DB_NAME=qatoolbox_production" >> .env
+            echo "DB_USER=qatoolbox" >> .env
+            echo "DB_PASSWORD=qatoolbox123" >> .env
+            echo "DB_HOST=db" >> .env
+            echo "DB_PORT=5432" >> .env
+            echo "REDIS_URL=redis://:redis123@redis:6379/0" >> .env
+            echo "ALLOWED_HOSTS=47.103.143.152,localhost,127.0.0.1,shenyiqing.xin,www.shenyiqing.xin" >> .env
+            echo "DEEPSEEK_API_KEY=sk-c4a84c8bbff341cbb3006ecaf84030fe" >> .env
+            echo "PIXABAY_API_KEY=36817612-8c0c4c8c8c8c8c8c8c8c8c8c" >> .env
+            echo "AMAP_API_KEY=a825cd9231f473717912d3203a62c53e" >> .env
           fi
           
           # 检查Docker是否运行
