修复Safety版本和SSH配置问题
- 降级Safety到2.3.5版本解决兼容性问题
- 优化SSH Action配置添加超时设置
- 创建SSH密钥生成和验证脚本
- 添加详细的SSH配置修复报告

--- a/.github/workflows/ci-cd.yml
+++ b/.github/workflows/ci-cd.yml
@@ -72,7 +72,7 @@ jobs:
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         # 确保代码质量工具版本一致
-        pip install flake8==6.1.0 black==25.1.0 isort==5.13.2 mypy==1.8.0 bandit==1.7.5 safety==3.0.1 pylint==3.0.3 coverage==7.4.0
+        pip install flake8==6.1.0 black==25.1.0 isort==5.13.2 mypy==1.8.0 bandit==1.7.5 safety==2.3.5 pylint==3.0.3 coverage==7.4.0
     
     - name: 代码格式化检查
       run: |
@@ -112,6 +112,8 @@ jobs:
         echo "::endgroup::"
         
         echo "::group::依赖漏洞扫描"
+        # 使用较旧版本的safety避免兼容性问题
+        pip install safety==2.3.5
         safety check --json || true
         safety check || true
         echo "::endgroup::"
@@ -379,6 +381,8 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_PORT || 22 }}
         script_stop: true
+        timeout: 60s
+        command_timeout: 30s
         script: |
           echo "🚀 开始部署到${{ github.event.inputs.environment }}环境..."
           
@@ -435,6 +439,8 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_PORT || 22 }}
         script_stop: true
+        timeout: 60s
+        command_timeout: 30s
         script: |
           echo "📦 创建部署前备份..."
           cd ~/modeshift_django || exit 1
@@ -466,6 +472,8 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_PORT || 22 }}
         script_stop: true
+        timeout: 60s
+        command_timeout: 30s
         script: |
           echo "🚀 执行零停机自动部署..."
           
@@ -555,6 +563,8 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         port: ${{ secrets.SERVER_PORT || 22 }}
         script_stop: true
+        timeout: 60s
+        command_timeout: 30s
         script: |
           echo "🚨 执行紧急部署..."
           
